--- a/package.json
+++ b/package.json
@@ -7,81 +7,90 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "update": "node update_dependencies.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/push-notification-ios": "^1.11.0",
-    "@react-native-firebase/analytics": "^19.0.0",
-    "@react-native-firebase/app": "^19.0.0",
-    "@react-native-firebase/crashlytics": "^19.0.0",
-    "@react-native-firebase/messaging": "^19.0.0",
+    "@react-native-firebase/analytics": "^20.4.0",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/crashlytics": "^20.4.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native-picker/picker": "^2.6.1",
-    "@react-navigation/bottom-tabs": "^6.5.16",
-    "@react-navigation/elements": "^1.3.26",
-    "@react-navigation/material-top-tabs": "^6.6.10",
-    "@react-navigation/native": "^6.1.14",
-    "@react-navigation/stack": "^6.3.25",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@react-native-picker/picker": "^2.8.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/elements": "^1.3.31",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react-native-material-ripple": "^0.9.6",
-    "axios": "^1.6.7",
-    "formik": "^2.4.5",
-    "immer": "^10.0.3",
-    "lottie-ios": "^4.4.1",
-    "lottie-react-native": "^6.7.0",
+    "axios": "^1.7.5",
+    "formik": "^2.4.6",
+    "immer": "^10.1.1",
+    "lottie-ios": "^4.5.0",
+    "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "process": "^0.11.10",
-    "ramda": "^0.29.1",
-    "react": "18.2.0",
-    "react-content-loader": "^6.2.1",
-    "react-native": "0.73.5",
-    "react-native-config": "^1.5.1",
-    "react-native-gesture-handler": "^2.15.0",
+    "ramda": "^0.30.1",
+    "react": "^18.3.1",
+    "react-content-loader": "^7.0.2",
+    "react-native": "^0.75.2",
+    "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-keychain": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modest-checkbox": "^3.3.0",
-    "react-native-pager-view": "^6.2.3",
-    "react-native-paper": "^5.12.3",
-    "react-native-permissions": "^4.1.4",
+    "react-native-pager-view": "^6.4.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^4.1.5",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.7.2",
+    "react-native-reanimated": "^3.15.1",
     "react-native-restart": "^0.0.27",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "^15.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-touch-id": "^4.4.1",
-    "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/runtime": "^7.25.6",
+    "@react-native/babel-preset": "^0.75.2",
+    "@react-native/eslint-config": "^0.75.2",
+    "@react-native/eslint-plugin": "^0.75.2",
+    "@react-native/metro-config": "^0.75.2",
+    "@react-native/typescript-config": "^0.75.2",
+    "@types/react": "^18.3.4",
+    "@types/react-test-renderer": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.9.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-unused-imports": "^4.1.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "react-test-renderer": "^18.3.1",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
