--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-community/push-notification-ios": "^1.11.0",
-    "@react-native-firebase/analytics": "^20.4.0",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/crashlytics": "^20.4.0",
-    "@react-native-firebase/messaging": "^20.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -30,7 +26,7 @@
     "axios": "^1.7.5",
     "formik": "^2.4.6",
     "immer": "^10.1.1",
-    "lottie-ios": "^4.5.0",
+    "lottie-ios": "4.4.1",
     "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
