--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNTemplate",
+  "name": "react-native-template",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,81 +11,88 @@
     "update": "node update_dependencies.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
-    "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native-picker/picker": "^2.8.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/elements": "^1.3.31",
-    "@react-navigation/material-top-tabs": "^6.6.14",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-native/gradle-plugin": "^0.78.0",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/elements": "^2.2.6",
+    "@react-navigation/material-top-tabs": "^7.1.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/react-native-material-ripple": "^0.9.6",
-    "axios": "^1.7.5",
+    "axios": "^1.8.3",
     "formik": "^2.4.6",
     "immer": "^10.1.1",
-    "lottie-ios": "4.4.1",
-    "lottie-react-native": "^6.7.2",
+    "lottie-ios": "4.5.0",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
+    "moment-timezone": "^0.5.47",
     "process": "^0.11.10",
     "ramda": "^0.30.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-content-loader": "^7.0.2",
-    "react-native": "^0.75.2",
-    "react-native-config": "^1.5.3",
-    "react-native-gesture-handler": "^2.18.1",
-    "react-native-keychain": "^8.2.0",
+    "react-native": "^0.78.0",
+    "react-native-config": "^1.5.5",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-keychain": "^9.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-ripple": "^0.9.1",
-    "react-native-pager-view": "^6.4.1",
-    "react-native-paper": "^5.12.5",
-    "react-native-permissions": "^4.1.5",
+    "react-native-pager-view": "^6.7.0",
+    "react-native-paper": "^5.13.1",
+    "react-native-permissions": "^5.2.6",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated": "^3.17.1",
     "react-native-restart": "^0.0.27",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
     "react-native-size-matters": "^0.4.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^15.6.0",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.0.5",
     "react-native-touch-id": "^4.4.1",
-    "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/runtime": "^7.25.6",
-    "@react-native/babel-preset": "^0.75.2",
-    "@react-native/eslint-config": "^0.75.2",
-    "@react-native/eslint-plugin": "^0.75.2",
-    "@react-native/metro-config": "^0.75.2",
-    "@react-native/typescript-config": "^0.75.2",
-    "@types/react": "^18.3.4",
-    "@types/react-test-renderer": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.26.10",
+    "@react-native-community/cli": "^15.1.0",
+    "@react-native-community/cli-platform-android": "15.1.0",
+    "@react-native-community/cli-platform-ios": "15.1.0",
+    "@react-native/babel-preset": "^0.78.0",
+    "@react-native/eslint-config": "^0.78.0",
+    "@react-native/eslint-plugin": "^0.78.0",
+    "@react-native/metro-config": "^0.78.0",
+    "@react-native/typescript-config": "^0.78.0",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.0.11",
+    "@types/react-test-renderer": "^19.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.9.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-native": "^4.1.0",
-    "eslint-plugin-unused-imports": "^4.1.3",
+    "eslint": "^9.22.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3",
-    "react-test-renderer": "^18.3.1",
-    "typescript": "^5.5.4"
+    "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-test-renderer": "^19.0.0",
+    "typescript": "^5.8.2"
   },
+  "packageManager": "yarn@3.6.1",
   "engines": {
     "node": ">=18"
   }
