--- a/package.json
+++ b/package.json
@@ -38,18 +38,21 @@
     "react-native": "^0.78.0",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-keychain": "^9.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-ripple": "^0.9.1",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
     "react-native-permissions": "^5.2.6",
+    "react-native-picker-select": "^9.3.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.17.1",
     "react-native-restart": "^0.0.27",
     "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-shapes": "^0.1.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.2",
@@ -76,6 +79,7 @@
     "@react-native/typescript-config": "^0.78.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.11",
+    "@types/react-native-i18n": "^2.0.3",
     "@types/react-test-renderer": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
