--- a/package.json
+++ b/package.json
@@ -82,15 +82,16 @@
     "@types/react": "^19.2.13",
     "@types/react-native-i18n": "^2.0.3",
     "@types/react-test-renderer": "^19.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.54.0",
-    "@typescript-eslint/parser": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
     "babel-jest": "^30.2.0",
-    "eslint": "^10.0.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-native": "^5.0.0",
-    "eslint-plugin-unused-imports": "^4.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^30.2.0",
     "prettier": "^3.8.1",
     "react-native-svg-transformer": "^1.5.3",
