--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "update": "node update_dependencies.js"
+    "update": "node update_dependencies.js",
+    "postinstall": "npx patch-package",
+    "pod-install": "cd ios && bundle install && bundle exec pod install && cd .."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.5.2",
     "@react-native-community/push-notification-ios": "^1.12.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -27,7 +28,7 @@
     "axios": "^1.13.4",
     "formik": "^2.4.9",
     "immer": "^11.1.3",
-    "lottie-ios": "^4.6.0",
+    "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
@@ -42,6 +43,8 @@
     "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-mmkv": "^4.1.2",
+    "react-native-nitro-modules": "^0.33.7",
     "react-native-pager-view": "^8.0.0",
     "react-native-paper": "^5.15.0",
     "react-native-permissions": "^5.4.4",
@@ -98,7 +101,6 @@
     "react-test-renderer": "^19.2.4",
     "typescript": "^5.9.3"
   },
-  "packageManager": "yarn@3.6.1",
   "engines": {
     "node": ">=18"
   }
